--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -3,16 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>save</title>
+    <!--  jquery cdn  -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- action속성: form에 작성한 데이터를 어디로 보낼지 지정-->
 <form action="/member/save" method="post">
-    <!-- name속성: 서버로 전송할 때 변수이름의 역할   -->
-    이메일: <input type="text" name="memberEmail"><br>
+    <!-- name속성: 서버로 전송할 때 변수이름의 역할             onblur="emailCheck()" 해당 키에 머무르고 있다가 다른 키로 가면 표시-->
+    이메일: <input type="text" name="memberEmail" id="memberEmail" >
+    <input type="button" value="중복확인" onclick="emailCheck()">
+    <span id="check-result"></span><br>
     비밀번호: <input type="password" name="memberPassword"><br>
     이름: <input type="text" name="memberName"><br>
-    <input type="submit" value="회원가입">
-
+    <input type="submit" value="회원가입" >
 </form>
 </body>
+<!--타입립프가 javascript로 해석하게 해라-->
+<script th:inline="javascript">
+    const emailCheck = () => {
+        const email = document.getElementById("memberEmail").value;
+        const checkResult = document.getElementById("check-result");
+        console.log("입력값: ", email);
+        <!--jquery에서 제공해주는 $.ajax때문에 윗부분에 jquery cdn사용 -->
+        $.ajax({
+        //      요청방식: post, url: "email-check", 데이터: 이메일
+            type: "post",
+            url: "/member/email-check",
+            data: {
+                "memberEmail": email //parameter값
+            },
+            success: function (res) {
+                console.log("요청성공", res);
+                if(res == "ok") {
+                    console.log("사용가능한 이메일");
+                    checkResult.style.color = "green";
+                    checkResult.innerHTML = "사용가능한 이메일";
+                }else {
+                    console.log("이미 사용중인 이메일");
+                    checkResult.style.color = "red";
+                    checkResult.innerHTML = "이미 사용중인 이메일";
+                }
+
+            },
+            error: function (err) {
+                console.log("에러발생", err);
+            }
+        });
+    }
+
+</script>
 </html>
