--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
 <!--이메일 값 출력-->
     session 값 확인: <p th:text="${session.loginEmail}"></p>
     <a href="/member/update">내 정보 수정하기</a>
-    <a href="/member/logout">로그아웃</a>
+    <a href="/member/logout">로그아웃ㄱ</a>
 
 
 </body>
